src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_comma_seperation_with_backstep).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<Interlace<P<(Ident, P<Option<Ident>>)>,\n        FPunct<','>>>(q.clone())"
---
Ok(
    Interlace {
        values: [
            P(
                (
                    Ident(
                        hello,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        world,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        hi,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        there,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
        ],
    },
)
