src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_empty).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<Interlace<Ident, FPunct<','>>>(q.clone())"
---
Ok(
    Interlace {
        values: [],
    },
)
