src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_esoterics).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<Interlace<P<(Ident, P<Option<P<(Two, Ident)>>>)>,\n        Two>>(q.clone())"
---
Ok(
    Interlace {
        values: [
            P(
                (
                    Ident(
                        r1,
                    ),
                    P(
                        Some(
                            P(
                                (
                                    P(
                                        (
                                            FPunct(
                                                Span,
                                            ),
                                            FPunct(
                                                Span,
                                            ),
                                        ),
                                    ),
                                    Ident(
                                        r2,
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        r3,
                    ),
                    P(
                        Some(
                            P(
                                (
                                    P(
                                        (
                                            FPunct(
                                                Span,
                                            ),
                                            FPunct(
                                                Span,
                                            ),
                                        ),
                                    ),
                                    Ident(
                                        r4,
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        r5,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
        ],
    },
)
