src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_tokens_after_interlace).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<(Interlace<Ident, (FJointPunct<':'>, FPunct<':'>)>,\n        (FPunct<'>'>, FPunct<';'>))>(q.clone())"
---
Ok(
    (
        Interlace {
            values: [
                Ident(
                    hello,
                ),
            ],
        },
        (
            FPunct(
                Span,
            ),
            FPunct(
                Span,
            ),
        ),
    ),
)
