src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_trailing_with).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<InterlaceTrail<Ident, FPunct<','>>>(q.clone())"
---
Ok(
    Interlace {
        values: [
            Ident(
                hi,
            ),
            Ident(
                hello,
            ),
        ],
    },
)
