src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_with_arbitrarilly).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<Interlace<P<(Ident, Rep<Ident>)>, Rep<FPunct<','>>>>(q.clone())"
---
Ok(
    Interlace {
        values: [
            P(
                (
                    Ident(
                        hello,
                    ),
                    Rep(
                        [
                            Ident(
                                hi,
                            ),
                            Ident(
                                world,
                            ),
                        ],
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        hi,
                    ),
                    Rep(
                        [],
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        there,
                    ),
                    Rep(
                        [],
                    ),
                ),
            ),
        ],
    },
)
