src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (parse it_matches_with_arbitrarilly_sized_interlacing).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::parse::<Interlace<P<(Ident, P<Option<Ident>>)>,\n        Rep<FPunct<','>>>>(q.clone())"
---
Ok(
    Interlace {
        values: [
            P(
                (
                    Ident(
                        hello,
                    ),
                    P(
                        Some(
                            Ident(
                                hi,
                            ),
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        world,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        hi,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        there,
                    ),
                    P(
                        Some(
                            Ident(
                                hello,
                            ),
                        ),
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        world,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        hi,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
            P(
                (
                    Ident(
                        there,
                    ),
                    P(
                        None,
                    ),
                ),
            ),
        ],
    },
)
