src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__interlace__tests__concat_idents! (peek it_matches_comma_seperation).snap
---
source: src/type_atoms/adt/interlace.rs
expression: "crate::test_peek::<Interlace<Ident, FPunct<','>>>(q.clone())"
---
Some(
    7,
)
